--- a/styles.css
+++ b/styles.css
@@ -212,8 +212,9 @@ html,body{
 .globe{
   width:280px; height:280px; border-radius:50%;
   border:3px solid #000; box-shadow:0 8px 0 #0003; overflow:hidden;
-  background-image:url('https://upload.wikimedia.org/wikipedia/commons/8/80/Mercator_projection_SW.jpg');
-  background-size:cover; background-position:0 center; cursor:grab;
+  background-color:#0a0a0a;
+  background-image:url('https://upload.wikimedia.org/wikipedia/commons/5/51/BlankMap-World-v2.png');
+  background-size:auto 100%; background-position:0 center; background-repeat:repeat-x;
 }
 .globe:active{cursor:grabbing}
 .pins{position:relative; width:100%; height:100%}
